--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,6 @@
 eureka:
- instance:
+ instance: 
+  instance-id: "${spring.application.name}:${random.value}"
   hostname: localhost
   prefer-ip-address: true
  client:
